# pose_verification

./: CMakeLists.txt  README.md  package.xml
include/pose_verification/: pose_verification.h
src/: pose_verification.cc
